# lol-genius

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Dockerfile.proxy  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.dashboard.txt  requirements.proxy.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-electron.yml  ci.yml  publish-model.yml
db/migrations/: 20260303000000_add_time_window_metrics.sql  20260303000001_fix_live_model_data.sql  20260304000000_add_timeline_features.sql  20260305000000_add_pregame_prior.sql  20260306000000_add_puuid_index.sql  20260309000000_add_level_columns.sql  20260310000000_add_per_role_columns.sql
electron-app/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
electron-app/sidecar/: build.sh  shap_predict.py
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.ts  types.ts  utils.ts
lol_genius/: cli.py  config.py  utils.py
lol_genius/api/: client.py  ddragon.py  proxy_client.py  riot_api.py
lol_genius/crawler/: enrich.py  fetch_timelines.py  planner.py  seed.py  snowball.py
shared/: live-feature-names.json  shap-categories.json
tests/: test_api_client.py  test_cache.py  test_db.py  test_enrich_batch.py  test_enrich_extended.py  test_features.py  test_key_pool.py  test_parse.py  test_proxy_client.py  test_seed.py  test_shared_constants.py  test_timeline.py
(+68 files in other folders)
